--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="../dist/neutrino.js">
+    <script src="../dist/neutrino.js" type="application/javascript">
     </script>
 </head>
 <body>
