--- a/test/index.html
+++ b/test/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../node_modules/mocha/mocha.css">
     <script src="../dist/neutrino.js" type="application/javascript">
     </script>
 </head>
 <body>
+    <!--Mocha unit tests runner-->
+    <div id="mocha"><p><a href=".">Index</a></p></div>
+    <div id="messages"></div>
+    <div id="fixtures"></div>
+    <script src="../node_modules/mocha/mocha.js"></script>
+    <script src="../node_modules/chai/chai.js"></script>
+    <script>mocha.setup('bdd')</script>
+    <script src="../test/test.js"></script>
+    <script>mocha.run();</script>
 </body>
 </html>
