--- a/test/index.html
+++ b/test/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="../node_modules/mocha/mocha.css">
+    <script>
+        Object.observe = null;
+        Array.observe = null;
+    </script>
     <script src="../dist/neutrino.js" type="application/javascript">
     </script>
 </head>
